Bug 376875 - [anim] play/pause button behaves like a play/stop button
Summary: [anim] play/pause button behaves like a play/stop button
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 410830 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-02-24 11:25 UTC by gordie.lachance+dev
Modified: 2019-08-12 07:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gordie.lachance+dev 2017-02-24 11:25:54 UTC
I know the animation button is named "play/pause", but it actually behaves like a "play/stop" button (and have a "stop" icon) : the playhead starts again from the beginning of the timeline when hitting play.

I suggest that the default behaviour of the button would be to play from where the playhead is (play/pause).
Maybe there could be a combination (eg. SHIFT + click on the button) to force playing back from the beginning - the icon would switch when hovered, too.

Thanks !
Comment 1 Halla Rempt 2017-02-27 13:41:32 UTC
Git commit 2770c842f9636e9fc03db467fa25221e318032b1 by Boudewijn Rempt.
Committed on 27/02/2017 at 13:41.
Pushed by rempt into branch 'krita/3.1'.

Change the tooltip: play is play/stop, not play/pause

M  +1    -1    plugins/dockers/animation/animation_docker.cpp

https://commits.kde.org/krita/2770c842f9636e9fc03db467fa25221e318032b1
Comment 2 Halla Rempt 2017-02-27 17:16:22 UTC
Git commit 6dc22a547052427490df52bbc79950d12c711e0c by Boudewijn Rempt.
Committed on 27/02/2017 at 13:40.
Pushed by rempt into branch 'master'.

Change the tooltip: play is play/stop, not play/pause

M  +1    -1    plugins/dockers/animation/animation_docker.cpp

https://commits.kde.org/krita/6dc22a547052427490df52bbc79950d12c711e0c
Comment 3 Halla Rempt 2019-08-12 07:01:46 UTC
*** Bug 410830 has been marked as a duplicate of this bug. ***