Change the tooltip: play is play/stop, not play/pause

BUG:376875